--- a/index.html
+++ b/index.html
@@ -52,7 +52,25 @@
   </header>
 
   <main>
-    <div id="background"></div>
+    <div class="container-fluid">
+      <section class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide" style="background-image: url(www/assets/slideshow/slideshow1.jpg);"></div>
+          <div class="swiper-slide" style="background-image: url(www/assets/slideshow/slideshow2.jpg);"></div>
+          <div class="swiper-slide" style="background-image: url(www/assets/slideshow/slideshow3.jpg);"></div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+  
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+  
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
+      </section>
 
     <div class="container">
       <div class="row my-5">
@@ -94,7 +112,7 @@
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
                 <a href="about-us.html" class="rotate mb-lg-3 mb-0">
                   <div class="mx-auto">
-                    <i class="fa-solid fa-chalkboard-user fa-5x"></i>
+                    <svg class="svg-inline--fa fa-chalkboard-user fa-5x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chalkboard-user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" data-fa-i2svg=""><path fill="currentColor" d="M160 64c0-35.3 28.7-64 64-64H576c35.3 0 64 28.7 64 64V352c0 35.3-28.7 64-64 64H336.8c-11.8-25.5-29.9-47.5-52.4-64H384V320c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v32h64V64L224 64v49.1C205.2 102.2 183.3 96 160 96V64zm0 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zM133.3 352h53.3C260.3 352 320 411.7 320 485.3c0 14.7-11.9 26.7-26.7 26.7H26.7C11.9 512 0 500.1 0 485.3C0 411.7 59.7 352 133.3 352z"></path></svg>
                   </div>
                   <h2 class="text-blue">Základní informace</h2>
                 </a>
@@ -103,7 +121,7 @@
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
                 <a href="for-applicants.html" class="rotate mb-lg-3 mb-0">
                   <div class="mx-auto">
-                    <i class="fa-solid fa-school fa-5x"></i>
+                    <svg class="svg-inline--fa fa-school fa-5x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="school" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" data-fa-i2svg=""><path fill="currentColor" d="M337.8 5.4C327-1.8 313-1.8 302.2 5.4L166.3 96H48C21.5 96 0 117.5 0 144V464c0 26.5 21.5 48 48 48H592c26.5 0 48-21.5 48-48V144c0-26.5-21.5-48-48-48H473.7L337.8 5.4zM256 416c0-35.3 28.7-64 64-64s64 28.7 64 64v96H256V416zM96 192h32c8.8 0 16 7.2 16 16v64c0 8.8-7.2 16-16 16H96c-8.8 0-16-7.2-16-16V208c0-8.8 7.2-16 16-16zm400 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v64c0 8.8-7.2 16-16 16H512c-8.8 0-16-7.2-16-16V208zM96 320h32c8.8 0 16 7.2 16 16v64c0 8.8-7.2 16-16 16H96c-8.8 0-16-7.2-16-16V336c0-8.8 7.2-16 16-16zm400 16c0-8.8 7.2-16 16-16h32c8.8 0 16 7.2 16 16v64c0 8.8-7.2 16-16 16H512c-8.8 0-16-7.2-16-16V336zM232 176a88 88 0 1 1 176 0 88 88 0 1 1 -176 0zm88-48c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16s-7.2-16-16-16H336V144c0-8.8-7.2-16-16-16z"></path></svg>
                   </div>
                   <h2 class="text-yellow">Informace pro uchazeče</h2>
                 </a>
@@ -112,7 +130,7 @@
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
                 <a href="fotogalery.html" class="rotate mb-lg-3 mb-0">
                   <div class="mx-auto">
-                    <i class="fa-solid fa-graduation-cap fa-5x"></i>
+                    <svg class="svg-inline--fa fa-graduation-cap fa-5x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="graduation-cap" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" data-fa-i2svg=""><path fill="currentColor" d="M320 32c-8.1 0-16.1 1.4-23.7 4.1L15.8 137.4C6.3 140.9 0 149.9 0 160s6.3 19.1 15.8 22.6l57.9 20.9C57.3 229.3 48 259.8 48 291.9v28.1c0 28.4-10.8 57.7-22.3 80.8c-6.5 13-13.9 25.8-22.5 37.6C0 442.7-.9 448.3 .9 453.4s6 8.9 11.2 10.2l64 16c4.2 1.1 8.7 .3 12.4-2s6.3-6.1 7.1-10.4c8.6-42.8 4.3-81.2-2.1-108.7C90.3 344.3 86 329.8 80 316.5V291.9c0-30.2 10.2-58.7 27.9-81.5c12.9-15.5 29.6-28 49.2-35.7l157-61.7c8.2-3.2 17.5 .8 20.7 9s-.8 17.5-9 20.7l-157 61.7c-12.4 4.9-23.3 12.4-32.2 21.6l159.6 57.6c7.6 2.7 15.6 4.1 23.7 4.1s16.1-1.4 23.7-4.1L624.2 182.6c9.5-3.4 15.8-12.5 15.8-22.6s-6.3-19.1-15.8-22.6L343.7 36.1C336.1 33.4 328.1 32 320 32zM128 408c0 35.3 86 72 192 72s192-36.7 192-72L496.7 262.6 354.5 314c-11.1 4-22.8 6-34.5 6s-23.5-2-34.5-6L143.3 262.6 128 408z"></path></svg>
                   </div>
                   <h2 class="text-green">Obrazem od nás</h2>
                 </a>
@@ -233,7 +251,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-solid fa-location-dot fa-2x"></i>
+              <svg class="svg-inline--fa fa-location-dot fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="location-dot" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
             </div>
             <div class="col-10 my-auto text-left">
               <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
@@ -246,7 +264,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-solid fa-comment fa-2x"></i>
+              <svg class="svg-inline--fa fa-comment fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4l0 0 0 0 0 0 0 0 .3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z"></path></svg>
             </div>
             <div class="col-10 d-flex flex-column text-left">
               <a href="tel:+420 469 311 292"> 469 311 292 </a>
@@ -257,7 +275,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-brands fa-facebook fa-2x"></i>
+              <svg class="svg-inline--fa fa-facebook fa-2x" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>
             </div>
             <div class="col-10 my-auto text-left">
               <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
