--- a/our-team.html
+++ b/our-team.html
@@ -76,7 +76,7 @@
       </div>
       <div class="row our-team mb-4">
         <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-          <i class="fa-regular fa-circle-user fa-10x"></i>
+          <svg class="svg-inline--fa fa-circle-user fa-10x" aria-hidden="true" focusable="false" data-prefix="far" data-icon="circle-user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M406.5 399.6C387.4 352.9 341.5 320 288 320H224c-53.5 0-99.4 32.9-118.5 79.6C69.9 362.2 48 311.7 48 256C48 141.1 141.1 48 256 48s208 93.1 208 208c0 55.7-21.9 106.2-57.5 143.6zm-40.1 32.7C334.4 452.4 296.6 464 256 464s-78.4-11.6-110.5-31.7c7.3-36.7 39.7-64.3 78.5-64.3h64c38.8 0 71.2 27.6 78.5 64.3zM256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-272a40 40 0 1 1 0-80 40 40 0 1 1 0 80zm-88-40a88 88 0 1 0 176 0 88 88 0 1 0 -176 0z"></path></svg>
         </div>
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="even">
@@ -104,7 +104,7 @@
       </div>
       <div class="row our-team mb-4">
         <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-          <i class="fa-regular fa-circle-user fa-10x"></i>
+          <svg class="svg-inline--fa fa-circle-user fa-10x" aria-hidden="true" focusable="false" data-prefix="far" data-icon="circle-user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M406.5 399.6C387.4 352.9 341.5 320 288 320H224c-53.5 0-99.4 32.9-118.5 79.6C69.9 362.2 48 311.7 48 256C48 141.1 141.1 48 256 48s208 93.1 208 208c0 55.7-21.9 106.2-57.5 143.6zm-40.1 32.7C334.4 452.4 296.6 464 256 464s-78.4-11.6-110.5-31.7c7.3-36.7 39.7-64.3 78.5-64.3h64c38.8 0 71.2 27.6 78.5 64.3zM256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-272a40 40 0 1 1 0-80 40 40 0 1 1 0 80zm-88-40a88 88 0 1 0 176 0 88 88 0 1 0 -176 0z"></path></svg>
         </div>
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="odd">
@@ -132,7 +132,7 @@
       </div>
       <div class="row our-team mb-4">
         <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-          <i class="fa-regular fa-circle-user fa-10x"></i>
+          <svg class="svg-inline--fa fa-circle-user fa-10x" aria-hidden="true" focusable="false" data-prefix="far" data-icon="circle-user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M406.5 399.6C387.4 352.9 341.5 320 288 320H224c-53.5 0-99.4 32.9-118.5 79.6C69.9 362.2 48 311.7 48 256C48 141.1 141.1 48 256 48s208 93.1 208 208c0 55.7-21.9 106.2-57.5 143.6zm-40.1 32.7C334.4 452.4 296.6 464 256 464s-78.4-11.6-110.5-31.7c7.3-36.7 39.7-64.3 78.5-64.3h64c38.8 0 71.2 27.6 78.5 64.3zM256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-272a40 40 0 1 1 0-80 40 40 0 1 1 0 80zm-88-40a88 88 0 1 0 176 0 88 88 0 1 0 -176 0z"></path></svg>
         </div>
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="odd">
@@ -170,7 +170,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-solid fa-location-dot fa-2x"></i>
+              <svg class="svg-inline--fa fa-location-dot fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="location-dot" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
             </div>
             <div class="col-10 my-auto text-left">
               <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
@@ -183,7 +183,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-solid fa-comment fa-2x"></i>
+              <svg class="svg-inline--fa fa-comment fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4l0 0 0 0 0 0 0 0 .3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z"></path></svg>
             </div>
             <div class="col-10 d-flex flex-column text-left">
               <a href="tel:+420 469 311 292"> 469 311 292 </a>
@@ -194,7 +194,7 @@
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
             <div class="col-2 my-auto">
-              <i class="fa-brands fa-facebook fa-2x"></i>
+              <svg class="svg-inline--fa fa-facebook fa-2x" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>
             </div>
             <div class="col-10 my-auto text-left">
               <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
