--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="www/dist/style.css"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="www/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="www/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="www/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="www/assets/favicon/site.webmanifest">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
