--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
           <img class="logo" alt="logo" src="www/assets/logo/logo.svg" width='150' height='150' />
         </a>
       </li>
-      <li tabindex='8'>
+      <li tabindex='0'>
         <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
           <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" width='150' height='150'  />
         </a>
       </li>
     </ul>
     <ul id="main-navigation">
-      <li tabindex='1'><a href="about-us.html">Aktivity školy</a></li>
-      <li tabindex='2'><a href="our-team.html">Náš tým</a></li>
-      <li tabindex='3'><a href="empty-page.html">Škola</a></li>
-      <li tabindex='4'><a href="fotogalery.html">Fotogalerie</a></li>
-      <li tabindex='5'><a href="for-applicants.html">Pro uchazeče</a></li>
-      <li tabindex='6'><a href="empty-page.html">Informace ke studiu</a></li>
-      <li tabindex='7'><a href="contacts.html">Kontakty</a></li>
+      <li tabindex='0'><a href="about-us.html">Aktivity školy</a></li>
+      <li tabindex='0'><a href="our-team.html">Náš tým</a></li>
+      <li tabindex='0'><a href="empty-page.html">Škola</a></li>
+      <li tabindex='0'><a href="fotogalery.html">Fotogalerie</a></li>
+      <li tabindex='0'><a href="for-applicants.html">Pro uchazeče</a></li>
+      <li tabindex='0'><a href="empty-page.html">Informace ke studiu</a></li>
+      <li tabindex='0'><a href="contacts.html">Kontakty</a></li>
     </ul>
     <ul id="burger-button" class="m-0">
       <li class="burger">
@@ -58,9 +58,7 @@
 <main>
   <div class="container-fluid">
     <section class="swiper">
-      <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
-        <!-- Slides -->
         <div class="swiper-slide">
           <img src='www/assets/slideshow/slideshow1.webp' alt='first-image' />
           <div class="swiper-lazy-preloader"></div>
@@ -78,8 +76,8 @@
       <div class="swiper-pagination"></div>
 
       <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev" tabindex='0'></div>
+      <div class="swiper-button-next" tabindex='0'></div>
 
       <!-- If we need scrollbar -->
       <div class="swiper-scrollbar"></div>
@@ -123,7 +121,7 @@
           <div class="col-10 mx-auto">
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
-                <a href="about-us.html" class="rotate mb-lg-3 mb-0" aria-label='Dozvěte se více o naší škole'>
+                <a href="about-us.html" class="rotate mb-lg-3 mb-0" aria-label='Dozvěte se více o naší škole' tabindex='0'>
                   <div class="mx-auto">
                     <svg class="svg-inline--fa fa-chalkboard-user fa-5x" aria-hidden="true" focusable="false"
                          data-prefix="fas" data-icon="chalkboard-user" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -137,7 +135,7 @@
                 <span> Informace o škole, jejím životě a novinkách. </span>
               </div>
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
-                <a href="for-applicants.html" class="rotate mb-lg-3 mb-0" aria-label='Máte zájem o studium, tak tadz najdete potřebné informace'>
+                <a href="for-applicants.html" class="rotate mb-lg-3 mb-0" aria-label='Máte zájem o studium, tak tadz najdete potřebné informace' tabindex='0'>
                   <div class="mx-auto">
                     <svg class="svg-inline--fa fa-school fa-5x" aria-hidden="true" focusable="false" data-prefix="fas"
                          data-icon="school" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"
@@ -151,7 +149,7 @@
                 <span> Informace pro zájemce o studium. </span>
               </div>
               <div class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center">
-                <a href="fotogalery.html" class="rotate mb-lg-3 mb-0" aria-label='Fotky z výletů najdete na tomto odkazu'>
+                <a href="fotogalery.html" class="rotate mb-lg-3 mb-0" aria-label='Fotky z výletů najdete na tomto odkazu' tabindex='0'>
                   <div class="mx-auto">
                     <svg class="svg-inline--fa fa-graduation-cap fa-5x" aria-hidden="true" focusable="false"
                          data-prefix="fas" data-icon="graduation-cap" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -178,7 +176,7 @@
           <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
           <div class="row align-items-center">
             <div class="col-sm-6 col-12 text-center">
-              <a href="https://www.pardubickykraj.cz/" target="_blank" aria-label='Přejít na stránky Pardubického kraje'>
+              <a href="https://www.pardubickykraj.cz/" target="_blank" aria-label='Přejít na stránky Pardubického kraje' tabindex='0'>
                 <svg id="Vrstva_1" xmlns="http://www.w3.org/2000/svg"
                       x="0px" y="0px" viewBox="0 0 264.7 52"
                       xml:space="preserve">
@@ -251,7 +249,7 @@
             </div>
             <div class="col-sm-6 col-12 my-auto">
               <a href="https://www.klickevzdelani.cz/" class="d-flex align-items-center justify-content-center"
-                 target="_blank" aria-label='Přejít na stránky Klíč ke vzdělání'>
+                 target="_blank" aria-label='Přejít na stránky Klíč ke vzdělání' tabindex='0'>
                 <img class="portal-img" alt="Školský portál" loading="lazy" width='322' height='310' src="www/assets/skolsky-portal.webp"/>
                 <p>Školský portál pardubického kraje</p>
               </a>
@@ -262,7 +260,7 @@
           <h3 class="mb-4">
             Naše škola je fakultní školou Univerzity Palackého v Olomouci
           </h3>
-          <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578" target="_blank" aria-label='Přejí na stránky Univerzity Olomouc'>
+          <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578" target="_blank" aria-label='Přejí na stránky Univerzity Olomouc' tabindex='0'>
             <img alt="logo fakultni skoly" class="upol-img" src="www/assets/fakultni-skola-upol.svg"  width='150' height='150'  />
           </a>
         </div>
@@ -289,7 +287,7 @@
           </div>
           <div class="col-10 my-auto text-left">
             <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-               target="_blank" aria-label='Přejít na stránky Google Maps'>
+               target="_blank" aria-label='Přejít na stránky Google Maps' tabindex='0'>
               Adámkova 55, 539 01 Hlinsko
             </a>
           </div>
@@ -306,8 +304,8 @@
             </svg>
           </div>
           <div class="col-10 d-flex flex-column text-left">
-            <a href="tel:+420 469 311 292" aria-label='Zavolejte nám přes tento odkaz'> 469 311 292 </a>
-            <a href="mailto:red@gymhlinsko.cz" aria-label='Napište nám e-mail přes tento odkaz'> red@gymhlinsko.cz </a>
+            <a href="tel:+420 469 311 292" aria-label='Zavolejte nám přes tento odkaz' tabindex='0'> 469 311 292 </a>
+            <a href="mailto:red@gymhlinsko.cz" aria-label='Napište nám e-mail přes tento odkaz' tabindex='0'> red@gymhlinsko.cz </a>
           </div>
         </div>
       </div>
@@ -323,7 +321,7 @@
           </div>
           <div class="col-10 my-auto text-left">
             <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ"
-               target="_blank" aria-label='Přejít na naše Facebookové stránky'>
+               target="_blank" aria-label='Přejít na naše Facebookové stránky' tabindex='0'>
               Facebookové stránky Gymnázia
             </a>
           </div>
